Fix thread message spacing

--- a/src/_css/style.css
+++ b/src/_css/style.css
@@ -35,6 +35,7 @@
     padding: 0em .5em;
     float: left;
     clear: both;
+    margin-bottom: 1em;
 }
 
 .speech-bubble-outgoing {
@@ -46,4 +47,5 @@
     padding: 0em .5em;
     float: right;
     clear: both;
+    margin-bottom: 1em;
 }
